<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="top1">Whipped Cream</string>
    <string name="top2">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_value">2</string>
    <string name="order">order</string>
    <string name="thank_you">Thank you!!</string>
    <string name="add">Add</string>
    <string name="trues">True</string>
    <string name="falses">Flase</string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just Java order for</string>


</resources>
